# yt_dlp_expand

./: README.md  pyproject.toml
src/: yt_dlp_expand.py
src/yt_dlp_expand/: __init__.py  main_script.py
