[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "yt_dlp_expand"
version = "0.3"
description = "説明"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT License"}
authors = [{name = "souno1218", email = "supinosaurusuz@gmail.com"},]
dependencies = ["yt-dlp[default]","mutagen","ffmpeg-python"]

[project.urls]
Homepage = "https://qiita.com/soun1218/items/3f07fbaa7029208dd789"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
yt_dlp_expand = "yt_dlp_expand:main"


#!python -m build
# pip install -U "yt-dlp[default]" "mutagen" "ffmpeg-python"
